--- a/src/main/resources/com/course/javafxjdbc/hello-view.fxml
+++ b/src/main/resources/com/course/javafxjdbc/hello-view.fxml
@@ -4,32 +4,28 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/22">
-  <content>
-    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0">
+<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.course.javafxjdbc.HelloController">
+   <content>
+      <VBox prefHeight="286.0" prefWidth="603.0">
          <children>
-            <VBox layoutY="14.0" prefHeight="333.0" prefWidth="530.0">
-               <children>
-                  <MenuBar>
-                    <menus>
-                      <Menu mnemonicParsing="false" text="Registration">
-                        <items>
-                          <MenuItem mnemonicParsing="false" text="Seller" />
-                              <MenuItem mnemonicParsing="false" text="Department" />
-                        </items>
-                      </Menu>
-                      <Menu mnemonicParsing="false" text="Help">
-                        <items>
-                          <MenuItem mnemonicParsing="false" text="About" />
-                        </items>
-                      </Menu>
-                    </menus>
-                  </MenuBar>
-               </children>
-            </VBox>
-         </children></AnchorPane>
-  </content>
+            <MenuBar>
+              <menus>
+                <Menu mnemonicParsing="false" text="Registration">
+                  <items>
+                    <MenuItem fx:id="menuItemSeller" mnemonicParsing="false" onAction="#OnMenuItemSellerAction" text="Seller" />
+                        <MenuItem fx:id="menuItemDepartment" mnemonicParsing="false" onAction="#OnMenuItemDepartmentAction" text="Department" />
+                  </items>
+                </Menu>
+                <Menu fx:id="menuItemAbout" mnemonicParsing="false" onAction="#OnMenuItemAboutAction" text="Help">
+                  <items>
+                    <MenuItem mnemonicParsing="false" text="About" />
+                  </items>
+                </Menu>
+              </menus>
+            </MenuBar>
+         </children>
+      </VBox>
+   </content>
 </ScrollPane>
